edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "storage/operation_status.proto";
import "storage/user.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_OPAQUE;

message BackupInfo {
  google.protobuf.Timestamp backup_last_run_at = 1;
  OperationStatus status = 2;
  SlimUser requestor = 3; // @gotags: sql:"ignore_labels(User ID)"
}

message SystemInfo {
  BackupInfo backup_info = 1;
}
